✨ Add team logo API
